// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntentsAndLabelsCard.vue renders correctly 1`] = `
<bhcard-stub>
  <div class="i-a-l-card">
    <div class="i-a-l-card__left">
      <div class="i-a-l-card__left__content"><strong>dog</strong>
        <div class="i-a-l-card__left__content__info"><span><strong>0</strong> Sentences</span>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</bhcard-stub>
`;

exports[`IntentsAndLabelsCard.vue renders correctly with diferents props When labelEntities array props have a array. Renders correctly 1`] = `
<bhcard-stub>
  <div class="i-a-l-card">
    <div class="i-a-l-card__left">
      <div class="i-a-l-card__left__content"><strong>dog</strong>
        <div class="i-a-l-card__left__content__info"><span><strong>0</strong> Sentences</span> <span><strong>0</strong> Entities</span></div>
      </div> <span>Entities</span></div>
    <div slot="append" class="entities">
      <bhbadge-stub class="entities__entity entity-sunflower"><span>Dog</span></bhbadge-stub>
      <bhbadge-stub class="entities__entity entity-energos"><span>Cat</span></bhbadge-stub>
      <bhbadge-stub class="entities__entity entity-blue-martina"><span>Buy</span></bhbadge-stub>
    </div>
  </div>
</bhcard-stub>
`;
